@@ -1,3 +1,6 @@
+2012-10-16
+ * images are by default created only in memory, written to disk when saving them
+
 0.9.4
 =====
 
